--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -1,3 +1,35 @@
+@mixin BoxShadow($dp) {
+    @if $dp==0 {
+        box-shadow: none;
+    } @else if $dp==1 {
+        box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 2px 1px -1px rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    } @else if $dp==2 {
+        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+    } @else if $dp==3 {
+        box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12), 0 1px 8px 0 rgba(0, 0, 0, 0.2);
+    } @else if $dp==4 {
+        box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
+    } @else if $dp==6 {
+        box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12),
+            0 3px 5px -1px rgba(0, 0, 0, 0.2);
+    } @else if $dp==8 {
+        box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12),
+            0 5px 5px -3px rgba(0, 0, 0, 0.2);
+    } @else if $dp==9 {
+        box-shadow: 0 9px 12px 1px rgba(0, 0, 0, 0.14), 0 3px 16px 2px rgba(0, 0, 0, 0.12),
+            0 5px 6px -3px rgba(0, 0, 0, 0.2);
+    } @else if $dp==12 {
+        box-shadow: 0 12px 17px 2px rgba(0, 0, 0, 0.14), 0 5px 22px 4px rgba(0, 0, 0, 0.12),
+            0 7px 8px -4px rgba(0, 0, 0, 0.2);
+    } @else if $dp==16 {
+        box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12),
+            0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    } @else if $dp==24 {
+        box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12),
+            0 11px 15px -7px rgba(0, 0, 0, 0.2);
+    }
+}
+
 :host {
     .toolbar {
         background-color: #004684;
@@ -39,12 +71,7 @@
 
     .name-input-field {
         left: 0px;
-        animation: rotateInDownLeft 0.4s ease 0.6s backwards;
-    }
-
-    .submit-button {
-        right: 0px;
-        animation: rotateInDownRight 0.2s ease 0.1s backwards;
+        animation: slideInDown 0.4s ease 0.6s backwards;
     }
 
     .finish-button {
@@ -62,6 +89,23 @@
         // animation: jackInTheBox 1s ease 2s forwards;
     }
 
+    @keyframes cv-fadeIn {
+        from {
+            opacity: 0;
+        }
+        to {
+            opacity: 1;
+        }
+    }
+
+    .emoji-button {
+        outline: none;
+        position: relative;
+        top: -70px;
+        left: 143px;
+        animation: bounce 0.6s ease-in-out 1.2s 1 normal forwards;
+    }
+
     //desktop
     @media (min-width: 576px) {
         .names-list-card {
@@ -71,7 +115,7 @@
             line-height: 26px;
             border-bottom: #1e41ea solid 1px;
             opacity: 0;
-            animation: bounceIn 0.5s ease 0.3s forwards;
+            animation: slideInDown 0.5s ease 0.1s backwards, cv-fadeIn 0.4s ease-in-out 0s forwards;
         }
         .bsr-mobile-container {
             max-width: 400px;
@@ -101,7 +145,7 @@
             line-height: 19px;
 
             opacity: 0;
-            animation: jackInTheBox 0.3s ease 0.1s forwards;
+            animation: slideInDown 0.3s ease 0.1s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
         }
     }
     //mobile
@@ -113,7 +157,7 @@
             line-height: 26px;
             border-bottom: #1e41ea solid 1px;
             opacity: 0;
-            animation: bounceIn 0.5s ease 0.3s forwards;
+            animation: slideInDown 0.5s ease 0.3s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
         }
 
         .bsr-mobile-container {
@@ -139,9 +183,8 @@
             max-height: 220px;
             font-size: 14px;
             line-height: 19px;
-
             opacity: 0;
-            animation: jackInTheBox 0.3s ease 0.1s forwards;
+            animation: slideInDown 0.3s ease 0.1s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
         }
     }
 
@@ -296,9 +339,28 @@
         background-color: white;
         font-size: 8px;
         outline: none;
-        animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
+        // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
         :hover {
-            animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
+            // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
+            @include BoxShadow(6)
         }
     }
+}
+
+.clickToSumit {
+    color: white;
+    right: 0px;
+    animation: slideInDown 0.2s ease 0.1s backwards;
+    // animation: name duration timing-function delay iteration-count direction fill-mode;
+}
+.clickToSumit:hover {
+    @include BoxShadow(6);
+}
+
+
+
+// Edit-Name.html
+
+.infoAlertBox{
+    animation: bounce 0.5 ease 0s 1 normal forwards;
 }
