--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div fxFlex="50" *ngIf="!isDeleting">
-                    <button (click)="buttonOption('cancel')" class="refreshbutton" mat-mini-fab
+                    <button (click)="buttonOption('cancel')" class="alertButons" mat-mini-fab
                         style="color: white;background-color: grey;" color="success" aria-label="icon">
                         <mat-icon>cancel</mat-icon>
                     </button><br>
@@ -50,7 +50,7 @@
 
                 <div fxFlex="50" *ngIf="!isDeleting">
                    
-                    <button (click)="buttonOption('delete')" class="refreshbutton" mat-mini-fab
+                    <button (click)="buttonOption('delete')" class="alertButons" mat-mini-fab
                         style="color: white;background-color: red;" color="success" aria-label="icon">
                         <mat-icon>delete</mat-icon>
                     </button><br>
