--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -1,9 +1,12 @@
 <div class="container mat-elevation-z4 bsr-mobile-container">
     <div class="row">
 
-        <mat-toolbar class="toolbar " fxLayoutAlign="space-between center">
-            <!-- <mat-icon>insert_drive_file</mat-icon>  -->
-            BI Project: {{projectName}}
+        <mat-toolbar class="toolbar " fxLayoutAlign="space-between center" style=" text-align: center;border-bottom-left-radius: 20px;border-bottom-right-radius: 20px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            ">
+            <mat-icon>insert_drive_file</mat-icon> {{projectName}}
 
             <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')"
                 style="color: white;background-color: #004684;  outline: none;">help</mat-icon>
@@ -91,8 +94,7 @@
                 </mat-card>
                 <br>
 
-                <form name="newNameForm" [formGroup]="newNameForm" novalidate class="nameform"
-                    style="text-align: center;">
+                <form name="newNameForm" [formGroup]="newNameForm" novalidate class="name-suggestions-field">
 
                     <mat-form-field appearance="outline" style="min-width: 330px;">
                         <mat-label>Name Suggestions</mat-label>
@@ -108,8 +110,8 @@
                     <div class="col" style="text-align: center;">
                         <div class="col" style="text-align: center;">
 
-                            <button (click)="sendNewName(); reference.value=''" mat-raised-button 
-                                color="primary" class="clickToSumit mat-elvation-z2" aria-label="LOG IN">
+                            <button (click)="sendNewName(); reference.value=''" mat-raised-button color="primary"
+                                class="clickToSumit mat-elvation-z2" aria-label="LOG IN">
                                 CLICK TO SUBMIT
                             </button>
                             <br>
@@ -172,8 +174,14 @@
         </div>
 
 
-            <!-- EMOJIES  -->
-        <div *ngIf="isEmojiTime mat-elevation-z4" class="test-emoji">
+        <!-- EMOJIES  -->
+        <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
+            <div class="example-handle" cdkDragHandle>
+                <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                  <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
+                  <path d="M0 0h24v24H0z" fill="none"></path>
+                </svg>
+              </div>
             <div class="tab-1">
                 Faces
                 <hr>
@@ -182,12 +190,12 @@
                 🤫 🤥 😶 😐 😑 😬 🙄 😯 😦 😧 😮 😲 🥱 😴 🤤 😪 😵 🤐 🥴 🤢 🤮 🤧 😷 🤒 🤕 🤑 🤠 😈 👿 👹 👺 🤡 💩 👻 💀
                 ☠️ 👽 👾 🤖 🎃 😺 😸 😹 😻 😼 😽 🙀 😿 😾
 
-             
+
                 Gestures and Body Parts
                 <hr>
                 👋 🤚 🖐 ✋ 🖖 👌 🤏 ✌️ 🤞 🤟 🤘 🤙 👈 👉 👆 🖕 👇 ☝️ 👍 👎 ✊ 👊 🤛 🤜 👏 🙌 👐 🤲 🤝 🙏 ✍️ 💅 🤳 💪 🦾
                 🦵 🦿 🦶 👂 🦻 👃 🧠 🦷 🦴 👀 👁 👅 👄 💋 🩸
-               
+
                 People and Fantasy
                 <hr>
                 👶 🧒 👦 👧 🧑 👱 👨 🧔 👨‍🦰 👨‍🦱 👨‍🦳 👨‍🦲 👩 👩‍🦰 🧑‍🦰 👩‍🦱 🧑‍🦱 👩‍🦳 🧑‍🦳 👩‍🦲 🧑‍🦲 👱‍♀️
