--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -98,6 +98,32 @@
         }
     }
 
+    .tab-1 {
+        overflow-y: scroll;
+        max-height: 200px;
+        line-height: 30px;
+        letter-spacing: -0.054em;
+        scrollbar-width: thin;
+        background-color: white;
+        opacity: 0.97;
+    }
+
+    .tab-1::-webkit-scrollbar {
+        display: none;
+    }
+
+    .test-emoji {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        position: absolute;
+        top: 480px;
+        border: navy solid 2px;
+        padding: 5px;
+        margin: 5px;
+        border-radius: 10px;
+    }
+
     //desktop
     @media (min-width: 576px) {
         .names-list-card {
@@ -139,6 +165,46 @@
             opacity: 0;
             animation: slideInDown 0.3s ease 0.1s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
         }
+
+        .tab-1 {
+            overflow-y: scroll;
+            max-height: 200px;
+            line-height: 30px;
+            letter-spacing: -0.054em;
+            scrollbar-width: thin;
+            background-color: white;
+            opacity: 0.97;
+        }
+
+        .tab-1::-webkit-scrollbar {
+            display: none;
+        }
+
+        .example-handle {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: #ccc;
+            cursor: move;
+            width: 24px;
+            height: 24px;
+            position: absolute;
+            right: auto;
+            top: 10px;
+            z-index: 99;
+        }
+
+        .test-emoji {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            position: absolute;
+            top: 518px;
+            border: navy solid 2px;
+            padding: 5px;
+            margin: 5px;
+            border-radius: 10px;
+        }
     }
     //mobile
     @media (max-width: 576px) {
@@ -178,23 +244,131 @@
             opacity: 0;
             animation: slideInDown 0.3s ease 0.1s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
         }
+        
+        .tab-1 {
+            overflow-y: scroll;
+            max-height: 175px;
+            line-height: 30px;
+            letter-spacing: -0.054em;
+            scrollbar-width: thin;
+            background-color: white;
+            opacity: 0.97;
+        }
+
+        .tab-1::-webkit-scrollbar {
+            display: none;
+        }
+
+        .test-emoji {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            position: absolute;
+            top: 455px;
+            border: navy solid 2px;
+            padding: 5px;
+            margin: 5px;
+            border-radius: 10px;
+        }
+
+        .example-handle {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: #ccc;
+            cursor: move;
+            width: 24px;
+            height: 24px;
+            position: absolute;
+            right: auto;
+            top: 10px;
+            z-index: 99;
+        }
+    }
+    // small mobile
+    @media (max-width: 400px) {
+        .names-list-card {
+            height: 260px;
+            overflow-y: scroll;
+            min-width: 330px;
+            line-height: 26px;
+            border-bottom: #1e41ea solid 1px;
+            opacity: 0;
+            animation: slideInDown 0.5s ease 0.3s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
+        }
+
+        .bsr-mobile-container {
+            max-width: 500px;
+            position: relative;
+            min-height: 100%;
+            overflow-y: hidden;
+        }
+
+        .tab-emoji {
+            max-width: 380px;
+            min-width: 380px;
+        }
+
+        .emoji-mobile-box {
+            background-color: #ffffff;
+            position: absolute;
+            top: 14%;
+            border: lightgrey 2px solid;
+            border-radius: 10px;
+            padding: 0px 11px 0px 16px;
+            margin: 10px;
+            max-height: 220px;
+            font-size: 14px;
+            line-height: 19px;
+            opacity: 0;
+            animation: slideInDown 0.3s ease 0.1s backwards, cv-fadeIn 1s ease-in-out 0.3s forwards;
+        }
+
+        .tab-1 {
+            overflow-y: scroll;
+            max-height: 175px;
+            line-height: 30px;
+            letter-spacing: -0.054em;
+            scrollbar-width: thin;
+            background-color: white;
+            opacity: 0.97;
+        }
+
+        .tab-1::-webkit-scrollbar {
+            display: none;
+        }
+
+        .test-emoji {
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            position: absolute;
+            top: 455px;
+            border: navy solid 2px;
+            padding: 5px;
+            margin: 5px;
+            border-radius: 10px;
+        }
+
+        .example-handle {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            color: #ccc;
+            cursor: move;
+            width: 24px;
+            height: 24px;
+            position: absolute;
+            right: auto;
+            top: 10px;
+            z-index: 99;
+        }
     }
 
     .emoji-mobile-box {
         overflow: hidden;
     }
     .emoji-mobile-box::-webkit-scrollbar {
-        display: none;
-    }
-
-    .tab-1 {
-        overflow-y: scroll;
-        height: 300px;
-        line-height: 30px;
-        letter-spacing: -0.054em;
-    }
-
-    .tab-1::-webkit-scrollbar {
         display: none;
     }
 
@@ -331,40 +505,46 @@
         background-color: white;
         font-size: 8px;
         outline: none;
-        animation: heartBeat 1s ease-in-out 0.3s 1 forwards;       
+        animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
     }
-    
-}
 
-.clickToSumit {
-    color: white;
-    right: 0px;
-    animation: slideInDown 0.2s ease 0.1s backwards;
-    // animation: name duration timing-function delay iteration-count direction fill-mode;
-}
+    .clickToSumit {
+        color: white;
+        right: 0px;
+        animation: slideInDown 0.2s ease 0.1s backwards;
+        // animation: name duration timing-function delay iteration-count direction fill-mode;
+    }
 
-.clickToSumit:hover {
-    @include BoxShadow(6);
-}
+    .clickToSumit:hover {
+        @include BoxShadow(6);
+    }
 
-// Edit-Name.html
+    // Edit-Name.html
 
-.infoAlertBox {
-    animation: bounce 0.5 ease 0s 1 normal forwards;
-}
+    .infoAlertBox {
+        animation: bounce 0.5 ease 0s 1 normal forwards;
+    }
 
-.emoji-button {
-    outline: none;
-    position: relative;
-    top: -70px;
-    left: 143px;
-    animation: headShake 0.6s ease-in-out 1.2s 1 normal forwards;
-}
+    .emoji-button {
+        outline: none;
+        position: relative;
+        top: -70px;
+        left: 143px;
+        animation: headShake 0.6s ease-in-out 1.2s 1 normal forwards;
+    }
 
-.alertButons {
-    // color: #004684;
-    background-color: white;
-    font-size: 8px;
-    outline: none;
-    // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;       
+    .alertButons {
+        // color: #004684;
+        background-color: white;
+        font-size: 8px;
+        outline: none;
+        // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
+    }
+
+    .name-suggestions-field {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
 }
