new grid layout ironman

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -63,10 +63,13 @@
                     </mat-checkbox>
                 </div>
                 <hr>
-                <div> <button (click)="submitCredentials()" style="width: 80px;" [disabled]="loginForm.invalid"  mat-icon-button>
-                        <mat-icon style="font-size: 3rem;color: #004785;">check_circle_outline</mat-icon>
+                <div> <button (click)="submitCredentials()" style="width: 80px;
+                    padding-right: 40px;" [disabled]="loginForm.invalid"  mat-icon-button>
+                        <mat-icon style="font-size: 4rem;color: #004785;">check_circle_outline</mat-icon>
                     </button></div>
-            </form>
+                </form>
+                <!-- <hr>
+                submit -->
         </div>
     </div>
 
