new grid layout ironman

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -1,12 +1,12 @@
 <div class="container mat-elevation-z4 bsr-mobile-container">
     <div class="row">
 
-        <mat-toolbar class="toolbar " fxLayoutAlign="space-between center" style=" text-align: center;border-bottom-left-radius: 20px;border-bottom-right-radius: 20px;
+        <mat-toolbar class="toolbar " fxLayoutAlign="space-between center" style=" text-align: center;border-bottom-left-radius: 6px;border-bottom-right-radius: 6px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             ">
-            <mat-icon>insert_drive_file</mat-icon> {{projectName}}
+  {{projectName}}
 
             <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')"
                 style="color: white;background-color: #004684;  outline: none;">help</mat-icon>
@@ -189,7 +189,7 @@
                 🤓 😎 🤩 🥳 😏 😒 😞 😔 😟 😕 🙁 ☹️ 😣 😖 😫 😩 🥺 😢 😭 😤 😠 😡 🤬 🤯 😳 🥵 🥶 😱 😨 😰 😥 😓 🤗 🤔 🤭
                 🤫 🤥 😶 😐 😑 😬 🙄 😯 😦 😧 😮 😲 🥱 😴 🤤 😪 😵 🤐 🥴 🤢 🤮 🤧 😷 🤒 🤕 🤑 🤠 😈 👿 👹 👺 🤡 💩 👻 💀
                 ☠️ 👽 👾 🤖 🎃 😺 😸 😹 😻 😼 😽 🙀 😿 😾
-
+                ❤️ 🧡 💛 💚 💙 💜 🖤 🤍 🤎 💔 ❣️ 💕 💞 💓 💗 💖 💘 💝 💟
 
                 Gestures and Body Parts
                 <hr>
