--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -45,11 +45,16 @@
         white-space: nowrap;
     }
 
+   
     .name-box {
         font-size: 20px;
         cursor: pointer;
         border-bottom: navy dashed 0.01em;
     }
+
+    .name-box:hover{
+        @include BoxShadow(2)
+       }
 
     .emoji-icon {
         outline: none;
