adding font awesome

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -173,8 +173,13 @@
 
         </div>
 
-
+       <!-- //COVGOZE, DYZPELVID, ジズペルビド , EQMANI, BETACOZ, COVGOZE, DYZPELVID , -->
         <!-- EMOJIES  -->
+
+
+        <!-- ❤️EMOJINAME,COOZOZE,OZYZPELVID ,BETACMA,NI,EQOZ,DYZPELVID ,COVGOZE,BETACOZ,DYZPELVID,COVGOZE,EQMANI,
+ジズペルビド ,,😕MaybeName,❤️ MyFavoriteName,🐣 ANONYMOUS_NAME,COVID-256👾,COVI 😷-19,🤯ASPIRINA,[̲̅ə̲̅٨̲̅٥̲̅٦̲̅,🩸Dropping,⋆⋆⃟⊱✪⃝⃞⃝⊰⋆⃟⋆⋆ ◤,🏃‍♂️三三☲=💨,ı̴̴̡̡̡ ̡͌l̡̡̡ ̡͌l̡*̡̡ ̴̡ı̴̴̡ ̡̡͡|̲̲̲͡͡͡ ̲▫̲͡ ̲̲̲͡͡π̲̲͡͡ ̲̲͡▫̲̲͡͡ ̲|̡̡̡ ̡ ̴̡ı̴̡̡ ̡͌l̡̡̡̡._2, -->
+
         <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
             <div class="example-handle" cdkDragHandle>
                 <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
