--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -20,10 +20,10 @@
     <div class="card 🧯" >
       <div class="fill mat-elevation-z4" style="display: flex;justify-content:space-around;align-items: center;flex-direction: column;">
         <div>
-          <button  class="work mat-elevation-z24" (click)="animate()" mat-raised-button>ACTION</button>
+          <button  class="work mat-elevation-z24" (click)="animate()" mat-raised-button><i class="fas fa-film"></i></button>
         </div>
         <div> 
-          <img class="mars-sprite" style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt="">
+          <img class="mars-sprite" style="width: 380px;border-bottom-left-radius: 60px;" [src]="'assets/img/mars/' + imageIndex" alt="">
         </div>
       </div>
     </div>
