--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -17,24 +17,39 @@
       </div>
 
     </div>
-    <div class="card 🧯" >
-      <div class="fill mat-elevation-z4" style="display: flex;justify-content:space-around;align-items: center;flex-direction: column;">
+    <div class="card 🧯">
+      <div class="fill mat-elevation-z4"
+        style="display: flex;justify-content:space-around;align-items: center;flex-direction: column;">
         <div>
-          <button  class="work mat-elevation-z24" (click)="animate()" mat-raised-button><i class="fas fa-film"></i></button>
+          <button class="work mat-elevation-z24" style="background-color: white; color: #222;" (click)="animate()"
+            mat-mini-fab >
+            <mat-icon>movie</mat-icon>
+          </button>
+
         </div>
-        <div> 
-          <img class="mars-sprite" style="width: 380px;border-bottom-left-radius: 60px;" [src]="'assets/img/mars/' + imageIndex" alt="">
+        <div>
+          <img class="mars-sprite" style="width: 380px;border-bottom-left-radius: 60px;"
+            [src]="'assets/img/mars/' + imageIndex" alt="">
         </div>
       </div>
     </div>
     <div class="card 💵">
-      <div class="fill mat-elevation-z4">💵</div>
+      <div class="fill mat-elevation-z2"> <button class="work mat-elevation-z8"
+          style="background-color: white; color: #222;" (click)="animate()" mat-mini-fab >
+          <mat-icon>home</mat-icon>
+        </button></div>
     </div>
     <div class="card 📆">
-      <div class="fill mat-elevation-z4">📆</div>
+      <div class="fill mat-elevation-z2"> <button class="work mat-elevation-z8"
+          style="background-color: white; color: #222;" (click)="animate()" mat-mini-fab >
+          <mat-icon>surround_sound</mat-icon>
+        </button></div>
     </div>
     <div class="card ❤">
-      <div class="fill mat-elevation-z4">❤</div>
+      <div class="fill mat-elevation-z2"> <button class="work mat-elevation-z8"
+          style="background-color: white; color: #222;" (click)="animate()" mat-mini-fab >
+          <mat-icon>favorite</mat-icon>
+        </button></div>
     </div>
   </div>
 </div>
