--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -34,10 +34,8 @@
       </div>
     </div>
     <div class="card 💵">
-      <div class="fill mat-elevation-z2"> <button class="work mat-elevation-z8"
-          style="background-color: white; color: #222;" (click)="animate()" mat-mini-fab >
-          <mat-icon>home</mat-icon>
-        </button></div>
+      <div class="fill mat-elevation-z2">  <img class="mars-sprite" style="width: 380px;border-bottom-left-radius: 60px;"
+        [src]="'assets/img/mars/' + imageIndex" alt=""></div>
     </div>
     <div class="card 📆">
       <div class="fill mat-elevation-z2"> <button class="work mat-elevation-z8"
