commit new page

--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -35,7 +35,7 @@
     </div>
     <div class="card 💵">
       <div class="fill mat-elevation-z2">  <img class="mars-sprite" style="width: 380px;border-bottom-left-radius: 60px;"
-        [src]="'assets/img/mars/' + imageIndex" alt=""></div>
+        [src]="'assets/img/mars/' + 'ezgif.com-gif-maker (4).gif'" alt=""></div>
     </div>
     <div class="card 📆">
       <div class="fill mat-elevation-z2"> <button class="work mat-elevation-z8"
