--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -2,12 +2,12 @@
     <!-- <div style="position: relative;overflow: hidden;background-image: url(toolbarBg.jpg);background-repeat: no-repeat;"
     fxLayoutAlign="center center"> -->
     <!-- EMOJIS -->
-    <div *ngIf="isEmojiTime" class="emoji-box mat-elevation-z8" cdkDrag>
+    <!-- <div *ngIf="isEmojiTime" class="emoji-box mat-elevation-z8" cdkDrag>
         <div class="emoji-handle" cdkDragHandle>
-            <!-- <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
               <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
               <path d="M0 0h24v24H0z" fill="none"></path>
-            </svg> -->
+            </svg>
         </div>
         <div class="col">
             <div class="row cancel-emoji">
@@ -99,7 +99,7 @@
 
         </div>
 
-    </div>
+    </div> -->
 
 
     <!-- DELETE BOX -->
@@ -323,7 +323,7 @@
 
                                 <mat-icon class="synonymsIcon" matTooltip="Synonyms: copy serach term first"
                                     matTooltipPosition="above" (click)="getSynonyms()">layers</mat-icon>
-                                <mat-icon class="synonymsIcon2" (click)="emojiToggle()">tag_faces</mat-icon>
+                                <!-- <mat-icon class="synonymsIcon2" (click)="emojiToggle()">tag_faces</mat-icon> -->
 
                                 <!-- <div class="ml-16">
                             <div class="h5 text-bold secondary-text">20 mins. ago</div>
