--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -102,10 +102,10 @@
 
                     </mat-form-field>
 
-                    <button class="emoji-button" (click)="emojiToggle()" mat-icon-button color="accent"
+                    <!-- <button class="emoji-button" (click)="emojiToggle()" mat-icon-button color="accent"
                         aria-label="emoji">
                         <mat-icon>tag_faces</mat-icon>
-                    </button>
+                    </button> -->
 
                     <div class="col" style="text-align: center;">
                         <div class="col" style="text-align: center;">
@@ -173,14 +173,7 @@
 
         </div>
 
-       <!-- //COVGOZE, DYZPELVID, ジズペルビド , EQMANI, BETACOZ, COVGOZE, DYZPELVID , -->
-        <!-- EMOJIES  -->
-
-
-        <!-- ❤️EMOJINAME,COOZOZE,OZYZPELVID ,BETACMA,NI,EQOZ,DYZPELVID ,COVGOZE,BETACOZ,DYZPELVID,COVGOZE,EQMANI,
-ジズペルビド ,,😕MaybeName,❤️ MyFavoriteName,🐣 ANONYMOUS_NAME,COVID-256👾,COVI 😷-19,🤯ASPIRINA,[̲̅ə̲̅٨̲̅٥̲̅٦̲̅,🩸Dropping,⋆⋆⃟⊱✪⃝⃞⃝⊰⋆⃟⋆⋆ ◤,🏃‍♂️三三☲=💨,ı̴̴̡̡̡ ̡͌l̡̡̡ ̡͌l̡*̡̡ ̴̡ı̴̴̡ ̡̡͡|̲̲̲͡͡͡ ̲▫̲͡ ̲̲̲͡͡π̲̲͡͡ ̲̲͡▫̲̲͡͡ ̲|̡̡̡ ̡ ̴̡ı̴̡̡ ̡͌l̡̡̡̡._2, -->
-
-        <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
+        <!-- <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
             <div class="example-handle" cdkDragHandle>
                 <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
@@ -217,7 +210,7 @@
                 👨‍👨‍👦‍👦 👨‍👨‍👧‍👧 👩‍👩‍👦 👩‍👩‍👧 👩‍👩‍👧‍👦 👩‍👩‍👦‍👦 👩‍👩‍👧‍👧 👨‍👦 👨‍👦‍👦 👨‍👧
                 👨‍👧‍👦 👨‍👧‍👧 👩‍👦 👩‍👦‍👦 👩‍👧 👩‍👧‍👦 👩‍👧‍👧 🗣 👤 👥 👣
             </div>
-            <!-- <mat-tab-group>
+            <mat-tab-group>
                 <mat-tab id="first-tab" label="First" style="overflow-y: hidden;">
                     <div style="overflow-y: scroll;overflow-x: hidden;">
                     😀 😃 😄 😁 😆 😅 😂 🤣 ☺️ 😊 😇 🙂 🙃 😉 😌 😍 🥰 😘 😗 😙 😚 😋 😛 😝 😜 🤪 🤨 🧐
@@ -269,8 +262,8 @@
                     v^√√v^──√v^√v^──√v^√√v^── 🏃‍♂️三三☲=💨 ⋆⋆⃟⊱✪⃝⃞⃝⊰⋆⃟⋆⋆ ◤◢◣◥◤◢◣◥ ◦°˚\😃/˚°◦ ♞▀▄▀▄♝▀▄
                     🐓🐓🥚 ══► 🍳 [̲̅$̲̅(̲̅10)̲̅$̲̅] ｍ（｡≧ _ ≦｡）ｍ Ꮹꄲꄲძ ℳꄲᖇᘉɪ̊ᘉ꒸.͙✼̥୭⁺ ◙▒◙♫♩♬ (ó﹏ò｡) 🌷 ꒐꓄'ꇙ ꇙꉣꋪ꒐ꋊꍌ 🌷
                 </mat-tab>
-            </mat-tab-group> -->
-        </div>
+            </mat-tab-group>
+        </div> -->
 
     </div>
 </div>
