--- a/src/app/bsr-mobile/edit-name.html
+++ b/src/app/bsr-mobile/edit-name.html
@@ -11,10 +11,10 @@
             <input matInput type="name" placeholder="name" formControlName="name">
         </mat-form-field>
         <br>
-        <!-- <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
+        <mat-form-field *ngIf="isDeleting" appearance="outline" style="max-width: 350px; min-width: 260px;">
             <mat-label>Rationale</mat-label>
             <input matInput type="name" placeholder="name" formControlName="rationale">
-        </mat-form-field> -->
+        </mat-form-field>
         <br>
 
         <div class="row" style="text-align: center;">
