anonymous icon and like button test for names on bsr mobile

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -6,7 +6,7 @@
             justify-content: space-between;
             align-items: center;
             ">
-  {{projectName}}
+            {{projectName}}
 
             <mat-icon *ngIf="isUserLogged" (click)="openDialog('displayInfo', '')"
                 style="color: white;background-color: #004684;  outline: none;">help</mat-icon>
@@ -89,8 +89,14 @@
                 <div class="mat-subheading-1">Name Suggestions: {{newNames.length}}</div>
                 <mat-card class="names-list-card">
                     <div *ngFor="let item of  newNames" class="name-box" (click)="openDialog(item.name, item.nameid)">
-                        {{item.name}}
+                        <div> {{item.name}}</div>
+                        <div *ngIf="(item.source === 'Anonymous')">
+                            <span style="font-size: 17px;" class="material-icons">
+                                font_download
+                                </span>
+                        </div>
                     </div>
+
                 </mat-card>
                 <br>
 
@@ -102,10 +108,10 @@
 
                     </mat-form-field>
 
-                    <button class="emoji-button" (click)="emojiToggle()" mat-icon-button color="accent"
+                    <!-- <button class="emoji-button" (click)="emojiToggle()" mat-icon-button color="accent"
                         aria-label="emoji">
                         <mat-icon>tag_faces</mat-icon>
-                    </button>
+                    </button> -->
 
                     <div class="col" style="text-align: center;">
                         <div class="col" style="text-align: center;">
@@ -175,7 +181,7 @@
 
 
         <!-- EMOJIES  -->
-        <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
+        <!-- <div *ngIf="isEmojiTime mat-elevation-z4" cdkDrag class="test-emoji">
             <div class="example-handle" cdkDragHandle>
                 <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
                   <path d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"></path>
@@ -212,7 +218,7 @@
                 👨‍👨‍👦‍👦 👨‍👨‍👧‍👧 👩‍👩‍👦 👩‍👩‍👧 👩‍👩‍👧‍👦 👩‍👩‍👦‍👦 👩‍👩‍👧‍👧 👨‍👦 👨‍👦‍👦 👨‍👧
                 👨‍👧‍👦 👨‍👧‍👧 👩‍👦 👩‍👦‍👦 👩‍👧 👩‍👧‍👦 👩‍👧‍👧 🗣 👤 👥 👣
             </div>
-            <!-- <mat-tab-group>
+            <mat-tab-group>
                 <mat-tab id="first-tab" label="First" style="overflow-y: hidden;">
                     <div style="overflow-y: scroll;overflow-x: hidden;">
                     😀 😃 😄 😁 😆 😅 😂 🤣 ☺️ 😊 😇 🙂 🙃 😉 😌 😍 🥰 😘 😗 😙 😚 😋 😛 😝 😜 🤪 🤨 🧐
@@ -264,8 +270,8 @@
                     v^√√v^──√v^√v^──√v^√√v^── 🏃‍♂️三三☲=💨 ⋆⋆⃟⊱✪⃝⃞⃝⊰⋆⃟⋆⋆ ◤◢◣◥◤◢◣◥ ◦°˚\😃/˚°◦ ♞▀▄▀▄♝▀▄
                     🐓🐓🥚 ══► 🍳 [̲̅$̲̅(̲̅10)̲̅$̲̅] ｍ（｡≧ _ ≦｡）ｍ Ꮹꄲꄲძ ℳꄲᖇᘉɪ̊ᘉ꒸.͙✼̥୭⁺ ◙▒◙♫♩♬ (ó﹏ò｡) 🌷 ꒐꓄'ꇙ ꇙꉣꋪ꒐ꋊꍌ 🌷
                 </mat-tab>
-            </mat-tab-group> -->
-        </div>
+            </mat-tab-group>
+        </div> -->
 
     </div>
 </div>
