--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -50,6 +50,9 @@
         font-size: 20px;
         cursor: pointer;
         border-bottom: navy dashed 0.01em;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;        
     }
 
     .name-box:hover{
