--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -321,9 +321,9 @@
                                 <!-- <mat-icon style="margin-right: 10px;">assignment</mat-icon> -->
                                 <h2 class="text-bold ">Key Words and Concepts</h2>
 
-                                <mat-icon class="synonymsIcon" matTooltip="Synonyms: copy serach term first"
+                                <mat-icon class="synonymsIcon" matTooltip="copy term to clip board ctrl + v"
                                     matTooltipPosition="above" (click)="getSynonyms()">layers</mat-icon>
-                                <mat-icon class="synonymsIcon2" (click)="emojiToggle()">tag_faces</mat-icon>
+                                <!-- <mat-icon class="synonymsIcon2" (click)="emojiToggle()">tag_faces</mat-icon> -->
 
                                 <!-- <div class="ml-16">
                             <div class="h5 text-bold secondary-text">20 mins. ago</div>
