--- a/src/app/bsr/editPost-it.html
+++ b/src/app/bsr/editPost-it.html
@@ -321,7 +321,7 @@
                                 <!-- <mat-icon style="margin-right: 10px;">assignment</mat-icon> -->
                                 <h2 class="text-bold ">Key Words and Concepts</h2>
 
-                                <mat-icon class="synonymsIcon" matTooltip="copy term to clip board ctrl + v"
+                                <mat-icon class="synonymsIcon" matTooltip="copy the term to clip board ctrl + c"
                                     matTooltipPosition="above" (click)="getSynonyms()">layers</mat-icon>
                                 <!-- <mat-icon class="synonymsIcon2" (click)="emojiToggle()">tag_faces</mat-icon> -->
 
