favorite logic done and test 2

--- a/src/app/bsr-mobile/bsr-mobile.component.html
+++ b/src/app/bsr-mobile/bsr-mobile.component.html
@@ -110,7 +110,7 @@
 
                     <mat-form-field appearance="outline" style="min-width: 330px;">
                         <mat-label>Name Suggestions</mat-label>
-                        <input matInput type="name" placeholder="name_1, name_2, name_3...." autofocus #reference
+                        <input matInput type="text"  placeholder="name_1, name_2, name_3...." #reference
                             formControlName="name">
 
                     </mat-form-field>
