full screen adjusted

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="example-container" *ngIf="true" [hasBackdrop]="false">
+<mat-sidenav-container class="main-container" *ngIf="true" [hasBackdrop]="false">
 
   
 
@@ -301,6 +301,7 @@
                       </span>
                       <div style="border-bottom: rgba(0,0,0,.12) 1px solid;width: 100%;text-align: center;"></div>
                     </div>
+                  </div>
                     <form name="loginForm" [formGroup]="loginForm" novalidate class="name-form2 "
                       fxLayoutAlign="center center">
 
@@ -318,7 +319,7 @@
                       <p style="position: absolute;
                     top: 60px;">www.mynamepage.com/{{projectId}}</p>
                     </form>
-                  </div>
+                 
                 </div>
               </div>
 
