--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -29,6 +29,15 @@
   }
 }
 
+.main-container {
+  position: absolute;
+  top: -50px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+}
+
 .presentation-box {
   width: 948px;
   height: 714px;
@@ -244,14 +253,6 @@
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.example-container {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: #fff;
-}
 .mat-sidenav-backdrop.mat-sidenav-shown {
   background-color: transparent !important;
 }
@@ -274,8 +275,8 @@
 }
 
 .name-form {
-  position: fixed;
-  top: 726px;
+  position: relative;
+  top: 133px;
   width: 300px;
   background-color: white;
   height: 90px;
@@ -284,14 +285,12 @@
   padding: 20px;
 }
 .name-form2 {
-  position: fixed;
-  top: 726px;
-  width: 590px;
+  position: relative;
+  bottom: -140px;
   background-color: white;
-  height: 90px;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
-  padding: 20px;
+  left: -180px;
 }
 
 .box {
