--- a/src/app/bsr/bsr.component.scss
+++ b/src/app/bsr/bsr.component.scss
@@ -405,12 +405,16 @@ mat-slider {
   overflow: hidden;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;
+  .deleteButton {
+   display: none;
+  }
 }
 
 .post-card:hover {
   @include BoxShadow(12);
   background-color: lightyellow;
   .deleteButton {
+    display: inline;
     color: #ff0000d1;
     font-size: 19px;
     margin: 5px;
@@ -437,9 +441,10 @@ mat-slider {
 .post-content {
   cursor: pointer;
   width: 263px;
-  height: 207px;
+  height: 198px;
   overflow-y: scroll;
   overflow-x: hidden;
+  font-size: 18px;
 }
 
 .post-content::-webkit-scrollbar {
@@ -556,12 +561,13 @@ table {
 
 .emoji-handle {
   position: absolute;
-  top: 8px;
-  right: 51px;
+  top: 5px;
+  // border: red solid 1px;
+  right: 2px;
   color: #000;
   cursor: move;
-  width: 664px;
-  height: 24px;
+  width: 276px;
+  height: 38px;
   z-index: 999999;
 }
 .emoji-box {
@@ -698,6 +704,16 @@ mat-tab-group ::-webkit-scrollbar {
 .fullscreen {
   position: absolute;
   right: 60px;
+  bottom: 30px;
+  outline: none;
+  .full-icon {
+    color: grey !important;
+    font-size: 30px;
+  }
+}
+.fullscreen2 {
+  position: absolute;
+  right: 100px;
   bottom: 30px;
   outline: none;
   .full-icon {
